--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,3 +1,6 @@
+<div class="card flex justify-content-center">
+    <p-dropdown [options]="cities" [(ngModel)]="selectedCity" optionLabel="name" (onChange)="onVal(selectedCity)"></p-dropdown>
+</div>
 <p>parent works!</p>
 <button (click)="increament()">increament</button>
 <button (click)="decreament()">decreament</button>
